Fix product spacing v2

--- a/src/scss/sections/products.scss
+++ b/src/scss/sections/products.scss
@@ -19,6 +19,5 @@
         flex-wrap: wrap;
         flex-direction: row;
         width: 100%;
-        padding: -5px;
     }
 }
